k8s/menifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-lang-app
  labels:
    app: go-lang-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-lang-app
  template:
    metadata:
      labels:
        app: go-lang-app
    spec:
      containers:
      - name: go-lang-app
        image: nandkishor1/go-lang-app
        ports:
        - containerPort: 8080
